# Riddles

./: pyproject.toml
src/: pyproject.toml
src/aoc_2023/aoc_2023_19/: test_aoc_2023_19.py
src/aoc_2023_19/: aoc_2023_19.py  test_aoc_2023_19.py
src/aoc_2024/aoc_2024_01/: test_aoc_2024_01.py
src/aoc_2024/aoc_2024_02/: test_aoc_2024_02.py
src/aoc_2024/aoc_2024_03/: aoc_2024_03.py
src/aoc_2024/aoc_2024_04/: aoc_2024_04.py  test_aoc_2024_04.py
src/aoc_2024/aoc_2024_05/: aoc_2024_05.py  test_aoc_2024_05.py
src/aoc_2024/aoc_2024_06/: aoc_2024_06.py  test_aoc_2024_06.py
src/aoc_2024/aoc_2024_07/: aoc_2024_07.py  test_aoc_2024_07.py
src/aoc_2024/aoc_2024_08/: aoc_2024_08.py  test_aoc_2024_08.py
src/aoc_2024/aoc_2024_09/: aoc_2024_09.py  test_aoc_2024_09.py
src/aoc_2024/aoc_2024_10/: aoc_2024_10.py  test_aoc_2024_10.py
src/aoc_2024/aoc_2024_11/: aoc_2024_11.py  test_aoc_2024_11.py
src/aoc_2024/aoc_2024_12/: aoc_2024_12.py  test_aoc_2024_12.py
src/aoc_2024_01/: aoc_2024_01.py  test_aoc_2024_01.py
src/aoc_2024_02/: aoc_2024_02.py  test_aoc_2024_02.py
src/aoc_2025/aoc_2025_01/: aoc_2025_01.py  test_aoc_2025_01.py
src/aoc_2025/aoc_2025_02/: aoc_2025_02.py  test_aoc_2025_02.py
src/aoc_2025/aoc_2025_03/: aoc_2025_03.py  test_aoc_2025_03.py
src/aoc_2025/aoc_2025_04/: aoc_2025_04.py  test_aoc_2025_04.py
src/commons/: commons.py
src/parenthesis_riddle/: parenthesis_riddle.py  test_parenthesis_riddle.py
src/utils/: aoc_structure_creator.py  commons.py
